# ohjelmistotekniikka

./: .coveragerc  .gitignore  .pylintrc  README.md  alembic.ini  mydb.db  pyproject.toml  tasks.py  test.md
alembic/: env.py
alembic/versions/: a65a5a5460e4_first_revision.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko1/stuff/: tiedosto.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: app_functions.py  config.py  db_functions.py  db_models.py  index.py  tkinter_layout.py
src/controller/: app_functions.py
src/model/: database.sqlite  db_models.py
src/tests/: app_functions_test.py
src/views/: data_variables.py  login_form.py  login_form_view.py  quote_button.py  quote_button_view.py  quote_options.py  quote_options_view.py  quote_text.py  quote_text_view.py  user_page.py  user_page_view.py  utils.py  widgets.py
