[tool.poetry]
name = "ohjelmistotekniikka"
version = "0.1.0"
description = ""
authors = ["Roni Bärman <104189902+roni-b@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
sqlalchemy = "^2.0.7"
requests = "^2.28.2"
ttkbootstrap = "^1.10.1"
bcrypt = "^4.0.1"
alembic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
autopep8 = "^2.0.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
